--- a/client/src/style.css
+++ b/client/src/style.css
@@ -2,6 +2,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 li {
@@ -13,22 +15,39 @@ html, body, #app, main {
 }
 
 main {
-    display: grid;
-    place-items: center;
+    display: flex;
+
+    padding: 2rem 5rem;
 }
 
 #grid {
+    display: flex;
+    align-items: flex-start;
+    gap: 0.5rem;
+}
+
+#grid .labels {
+    display: grid;
+    gap: 0.8rem;
+    translate: 0 -0.6rem;
+}
+
+#grid .labels li {
+    font-size: 0.9em;
+}
+
+#grid .content {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     /* gap: 0.1em; */
 
-    width: 40em;
+    width: 35rem;
 
     border: 1px solid black;
 }
 
-#grid li {
-    height: 1em;
+#grid .content li {
+    height: 1rem;
 
     border: 1px solid black;
 }
