--- a/client/src/style.css
+++ b/client/src/style.css
@@ -40,7 +40,7 @@ main {
 #grid .body {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    column-gap: 0.2em;
+    /* column-gap: 0.2em; */
 
     /* border: 1px solid black; */
 }
