--- a/client/src/style.css
+++ b/client/src/style.css
@@ -29,7 +29,7 @@ main {
 
 #grid .labels {
     display: grid;
-    gap: 0.8rem;
+    gap: 0.79rem;
     translate: 0 -0.7rem;
 }
 
@@ -40,9 +40,7 @@ main {
 #grid .body {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    /* column-gap: 0.2em; */
-
-    /* border: 1px solid black; */
+    column-gap: 0.2em;
 }
 
 #grid .body li {
@@ -50,19 +48,43 @@ main {
 
     height: 1rem;
 
-    border: 1px solid black;
-    border-bottom-width: 0;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px 3px 0 3px;
+}
+
+#grid .body .odd {
+    border-bottom-width: 2px;
+}
+
+#grid .body li:nth-of-type(-n + 7) {
+    border-top-width: 3px;
 }
 
 #grid .body li:nth-of-type(n + 218) {
-    border-bottom-width: 1px;
+    border-bottom-width: 3px;
 }
 
 #grid .body li div {
     width: 1rem;
 }
 
-#body .legend ul {
+#grid .legend ul {
     display: flex;
     justify-content: space-between;
+}
+
+#grid .legend li {
+    display: flex;
+    align-items: center;
+    gap: 0.2rem;
+
+    cursor: pointer;
+}
+
+#grid .legend li div {
+    height: 1em;
+    width: 1em;
+
+    border: 1px solid black;
 }
