--- a/client/src/style.css
+++ b/client/src/style.css
@@ -6,6 +6,10 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+:root {
+    --page-padding-vertical: 2rem;
+}
+
 li {
     list-style: none;
 }
@@ -16,12 +20,16 @@ html, body, #app, main {
 
 main {
     display: flex;
+    align-items: flex-start;
     justify-content: space-between;
 
-    padding: 2rem 5rem;
+    padding: var(--page-padding-vertical) 5rem;
 }
 
 #grid {
+    position: sticky;
+    top: var(--page-padding-vertical);
+
     display: flex;
     align-items: flex-start;
     gap: 0.5rem;
