--- a/client/src/style.css
+++ b/client/src/style.css
@@ -137,7 +137,7 @@ main {
     align-items: center;
     gap: 0.2rem;
 
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 
 #grid .legend li div {
