--- a/client/src/style.css
+++ b/client/src/style.css
@@ -8,6 +8,8 @@
 
 :root {
     --page-padding-vertical: 2rem;
+    --page-padding-horizontal: 5rem;
+    --nav-height: 4.5em;
 }
 
 li {
@@ -18,32 +20,166 @@ html, body, #app, main {
     min-height: 100%;
 }
 
-main {
+body {
+    font-size: 0.9em;
+}
+
+#grid-page {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
 
-    padding: var(--page-padding-vertical) 5rem;
+    padding: 0 var(--page-padding-horizontal) var(--page-padding-vertical) var(--page-padding-horizontal);
+}
+
+.buttons {
+    display: flex;
+    align-items: flex-start;
+    gap: 0.5em;
+}
+
+.buttons button {
+    padding: 0.25em 1em;
+
+    background-color: lightgrey;
+
+    font-weight: 500;
+
+    border: none;
+    outline: none;
+
+    cursor: pointer;
+}
+
+.display-input-container {
+    position: relative;
+}
+
+.display-input-container p {
+    position: absolute;
+    /* top: 50%;
+    left: 0;
+
+    translate: 0 -50%; */
+}
+
+/* .display-input-container .input-container {
+    z-index: -1;
+
+    opacity: 0;
+} */
+
+.input-container {
+    font-size: 0.85em;
+    
+    position: relative;
+}
+
+.input-container label {
+    position: absolute;
+    top: -0.8em; 
+    left: 0.5em;
+
+    background-color: white;
+
+    pointer-events: none;
+}
+
+.input-container input {
+    padding: 0.2em calc(0.5em - 1px) 0.3em calc(0.5em - 1px);
+
+    font-size: 1em;
+
+    border-width: 1px;
+}
+
+.input-container .error {
+    height: 1em;
+
+    color: red;
+}
+
+header {
+    position: sticky;
+    top: 0;
+
+    display: flex;
+    /* justify-content: space-between; */
+    gap: 0.5em;
+
+    padding: 1em var(--page-padding-horizontal);
+
+    height: var(--nav-height);
+
+    background-color: white;
+}
+
+header .header-inputs {
+    display: flex;
+    align-items: flex-start;
+    gap: 0.5em;
+}
+
+#confirmation {
+    z-index: 10;
+    position: fixed;
+    top: 0;
+    left: 0;
+    
+    display: none;
+    /* display: grid; */
+    place-items: center;
+
+    height: 100%;
+    width: 100%;
+
+    background-color: hsla(0, 0%, 0%, 0.7);
+}
+
+#confirmation .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+    padding: 5em;
+
+    /* min-width: min(30em, 90vw);
+    min-height: min(20em, 90vh); */
+
+    background-color: white;
+
+    /* border-radius: 2em; */
+}
+
+#confirmation .container p {
+    text-align: center;
+    font-weight: 500;
+    font-size: 1.2em;
+}
+
+#confirmation .container .prompt-question {
+    font-weight: 700;
 }
 
 #grid {
     position: sticky;
-    top: var(--page-padding-vertical);
+    top: var(--nav-height);
 
-    display: flex;
-    align-items: flex-start;
-    gap: 0.5rem;
+    display: grid;
+    gap: 1.5em;
 }
 
 #grid .content {
-    display: grid;
-    gap: 1rem;
+    display: flex;
+    align-items: flex-start;
+    gap: 0.5em;
 }
 
 #grid .labels {
     display: grid;
-    gap: 0.79rem;
-    translate: 0 calc(-0.7rem + 2.8em);
+    gap: 0.815em;
+    translate: 0 2.25em;
 }
 
 #grid .labels li {
@@ -60,7 +196,7 @@ main {
 #grid .body li {
     display: grid;
 
-    height: 1rem;
+    height: 1em;
 
     border-style: solid;
     border-color: black;
@@ -74,6 +210,8 @@ main {
 
     height: unset;
     border: none;
+
+    padding-bottom: 0.2em;
 }
 
 #grid .body .day .name {
@@ -115,34 +253,56 @@ main {
 }
 
 #grid .body li div {
-    width: 1rem;
+    width: 1em;
 }
 
 #grid .legend {
     display: grid;
-    gap: 0.5rem;
+    gap: 0.5em;
 }
 
-#grid .legend div > p {
-    font-size: 0.8rem;
+#grid .legend .instructions p {
+    font-size: 0.9em;
 }
 
 #grid .legend ul {
     display: flex;
-    gap: 1rem;
+    gap: 1em;
 }
 
 #grid .legend li {
     display: flex;
     align-items: center;
-    gap: 0.2rem;
+    gap: 0.2em;
 
-    /* cursor: pointer; */
+    cursor: pointer;
 }
 
 #grid .legend li div {
-    height: 1rem;
-    width: 1rem;
+    position: relative;
+}
+
+#grid .legend li div::after {
+    position: relative;
+    top: -35%;
+    left: 25%;
+
+    content: "x";
+
+    opacity: 0;
+}
+
+#grid .legend li:hover div::after {
+    opacity: 1;
+}
+
+#grid .legend li:hover p {
+    text-decoration: line-through;
+}
+
+#grid .legend li div {
+    height: 1em;
+    width: 1em;
 
     border: 1px solid black;
 }
@@ -151,21 +311,34 @@ main {
     font-weight: 600;
 }
 
+#grid .legend .controls {
+    display: flex;
+    /* justify-content: space-between; */
+    gap: 0.5em;
+
+    margin-top: 0.5em;
+}
+
+#grid .legend .controls .input-container  {
+    display: flex;
+    align-items: center;
+}
+
 #lists > ul {
     display: grid;
     grid-template-columns: auto auto;
-    gap: 2rem;
+    gap: 2em;
 }
 
 #lists .members li {
     display: flex;
     align-items: center;
-    gap: 0.2rem;
+    gap: 0.2em;
 }
 
 #lists .members li div {
-    height: 1rem;
-    width: 1rem;
+    height: 1em;
+    width: 1em;
 
     border: 1px solid black;
 }
